# win-keylogger

./: CMakeLists.txt
common/: CMakeLists.txt
common/keyboard/: listener.c  listener.h
common/log/: logger.c
common/memory/: memory.c  memory.h  shared.c  shared.h
common/settings/: constants.h
common/tcp/: client.c  client.h
hook/: CMakeLists.txt  hook.c
sharedmem-reader/: CMakeLists.txt  main.c
sharedmem-writer/: CMakeLists.txt  main.c
src/: CMakeLists.txt  main.c
src/keyboard/: listener.c  listener.h
src/log/: logger.c  logger.h
src/memory/: memory.c  memory.h
src/settings/: constants.h
tests/: CMakeLists.txt  test.c
tests/assertions/: assertions.c  assertions.h
